// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gets a student with applicant info 1`] = `
{
  "applicant": {
    "apellido_materno": "Ocasio",
    "apellido_paterno": "Martinez",
    "carrera": "Abogado (DECH)",
    "ciclo_ingreso": "2022A",
    "codigo": "1234567890",
    "email": "bad@bunny.pr",
    "externo": false,
    "genero": "M",
    "id": 1,
    "institutional_email": "benito.martinez@cusur.udg.mx",
    "nombre": "Benito Antonio",
    "telefono": "0001234567",
  },
  "applicantId": 1,
  "ciclo_actual": "2022B",
  "codigo": "1234567890",
  "curso": "en",
  "desertor": false,
  "groupId": 2,
  "groupObject": {
    "aula": "F4",
    "ciclo": "2022B",
    "course": "en",
    "id": 2,
    "name": "E4-1",
    "nivel": 4,
    "registrados": 30,
    "teacherId": 1,
    "time": "08:00-09:00",
  },
  "id": 3,
  "nivel": 4,
  "situacion": null,
}
`;

exports[`gets a teacher option with all reservations for attendance 1`] = `
{
  "attended": false,
  "create_time": Any<Date>,
  "id": 1,
  "option": {
    "active": true,
    "day": "Lunes",
    "id": 1,
    "place": "Centro de Aprendizaje Global",
    "teacher_id": 1,
    "time": "13:00",
    "url": null,
    "workshop_id": 1,
  },
  "option_id": 1,
  "student": {
    "applicant": {
      "apellido_materno": "Valadez",
      "apellido_paterno": "Aguilera",
      "carrera": "Agrobiotecnologia (AGB)",
      "ciclo_ingreso": "2022B",
      "codigo": "0987654321",
      "email": "juanga@elnoanoa.mx",
      "externo": false,
      "genero": "M",
      "id": 2,
      "institutional_email": "alberto.aguilera@alumnos.udg.mx",
      "nombre": "Alberto",
      "telefono": "0001234567",
    },
    "applicantId": 2,
    "ciclo_actual": "2022B",
    "codigo": "0987654321",
    "curso": "en",
    "desertor": false,
    "groupId": 2,
    "groupObject": {
      "aula": "F4",
      "ciclo": "2022B",
      "course": "en",
      "id": 2,
      "name": "E4-1",
      "nivel": 4,
      "registrados": 30,
      "teacherId": 1,
      "time": "08:00-09:00",
    },
    "id": 2,
    "nivel": 4,
    "situacion": null,
  },
  "student_id": 2,
}
`;

exports[`gets a teacher option with all reservations for attendance 2`] = `
{
  "attended": false,
  "create_time": Any<Date>,
  "id": 2,
  "option": {
    "active": true,
    "day": "Lunes",
    "id": 1,
    "place": "Centro de Aprendizaje Global",
    "teacher_id": 1,
    "time": "13:00",
    "url": null,
    "workshop_id": 1,
  },
  "option_id": 1,
  "student": {
    "applicant": {
      "apellido_materno": "Ocasio",
      "apellido_paterno": "Martinez",
      "carrera": "Abogado (DECH)",
      "ciclo_ingreso": "2022A",
      "codigo": "1234567890",
      "email": "bad@bunny.pr",
      "externo": false,
      "genero": "M",
      "id": 1,
      "institutional_email": "benito.martinez@cusur.udg.mx",
      "nombre": "Benito Antonio",
      "telefono": "0001234567",
    },
    "applicantId": 1,
    "ciclo_actual": "2022B",
    "codigo": "1234567890",
    "curso": "en",
    "desertor": false,
    "groupId": 2,
    "groupObject": {
      "aula": "F4",
      "ciclo": "2022B",
      "course": "en",
      "id": 2,
      "name": "E4-1",
      "nivel": 4,
      "registrados": 30,
      "teacherId": 1,
      "time": "08:00-09:00",
    },
    "id": 3,
    "nivel": 4,
    "situacion": null,
  },
  "student_id": 3,
}
`;

exports[`makes a reservation 1`] = `
{
  "attended": false,
  "create_time": 2022-09-23T00:00:00.000Z,
  "id": "1",
  "option": {
    "active": true,
    "day": "Lunes",
    "id": 1,
    "place": "Centro de Aprendizaje Global",
    "teacher": {
      "id": 1,
      "nombre": "Gonzalo Rocha",
    },
    "teacher_id": 1,
    "time": "13:00",
    "url": null,
    "workshop": {
      "description": "Conversation Club",
      "id": 1,
      "levels": [
        1,
        2,
        3,
        4,
        5,
        6,
      ],
      "name": "Conversation",
    },
    "workshop_id": 1,
  },
  "option_id": 1,
  "student": {
    "applicantId": 1,
    "ciclo_actual": "2022B",
    "codigo": "1234567890",
    "curso": "en",
    "desertor": false,
    "groupId": 2,
    "id": 3,
    "nivel": 4,
    "situacion": null,
  },
  "student_id": 3,
}
`;
